# nanoGPT

./: .gitignore  README.md  config.py  nanogpt.py  pyproject.toml  sample.py  setup_context.py  train.py
config/: train_shakespeare.py  train_shakespeare_char.py
nanogpt/: config.py  data_loader.py  head.py  masks.py  model.py  sample.py  trace.py  train.py  vocabs.py
shakespeare/: config.toml
shakespeare/shakespeare/: prepare.py
shakespeare_char/: config.toml
shakespeare_char/data/: prepare.py
