[project]
name = "nanogpt"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "torch>=2.2.2",
    "torchvision>=0.17.2",
    "torchaudio>=2.2.2",
    "numpy>=1.26.4",
    "transformers>=4.39.2",
    "datasets>=2.18.0",
    "tiktoken>=0.6.0",
    "wandb>=0.16.5",
    "tqdm>=4.66.2",
    "msgpack>=1.0.8",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["nanogpt"]
